--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">LRP</h1>
       <h2 class="project-tagline">Lorem Ipsum Dorem</h2>
+      <a href="page2.htm">page 2</a>
 
     </section>
   </body>
