one page text web presence for LRP

--- a/index.html
+++ b/index.html
@@ -1,20 +1,78 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>LRP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">LRP</h1>
-      <h2 class="project-tagline">Lorem Ipsum Dorem</h2>
-      <a href="page2.htm">page 2</a>
 
-    </section>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head><meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Lone Rock Point</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link href="lrp/bootstrap.css" rel="stylesheet">
+    <link href="lrp/main.css" rel="stylesheet">
+
+</head>
+<body>
+
+    <nav class="selectedwork navbar-fixed-bottom">
+        <div class="container">
+            <div class="row">
+                <div class=" col-xs-12 col-md-offset-2 col-md-8">
+                    <h5> This is a website. There are many like it, but this one is ours.</h5>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- Landing -->
+    <!-- Landing -->
+    <!-- Landing -->
+    <!-- Landing -->
+    <div class="landing vertical-center-container">
+        <div class="vertical-center-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-offset-2 col-md-7" style="z-index:100">
+                        <h1>
+                            Lone Rock Point is a purveyor of artisanal technology solutions for discerning organizations that appreciate quality and recognize value.
+                        </h1>
+
+                    </div>
+                    <div id="zigzag"> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    </div>
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
+</body>
+
+
 </html>
+
+
+
+
+
+
+
+
+
+    <script src="./Michael Mazur_files/jquery.min.js"></script>
+    <script src="./Michael Mazur_files/bootstrap.min.js"></script>
+    <script src="./Michael Mazur_files/app.js"></script>
+
+
+
+
+</body></html>
