--- a/index.html
+++ b/index.html
@@ -1,77 +1,49 @@
+<!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Lone Rock Point</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
-<!DOCTYPE html>
-<html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
+		<!-- Header -->
+			<header id="header">
+				<h1>Lone Rock Point</h1>
+				<p>Purveyors of artisanal technology solutions for discerning organizations that appreciate quality and recognize value.<br />
+				Preparing for takeoff in Fall 2016</p>
+			</header>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lone Rock Point</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link href="lrp/bootstrap.css" rel="stylesheet">
-    <link href="lrp/main.css" rel="stylesheet">
-</head>
-<body>
+		<!-- Signup Form 
+			<form id="signup-form" method="post" action="#">
+				<input type="email" name="email" id="email" placeholder="Email Address" />
+				<input type="submit" value="Sign Up" />
+			</form>
+		<!-- Footer -->
+			<footer id="footer">
+				 <ul class="icons">
+					<li><a href="https://twitter.com/jjtoothman" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+	<!-- 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
+					<li><a href="mailto:jjt@lonerockpoint.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>This is a website. There are many like it, but this one is ours.</li>
+				</ul>
+			</footer>
 
-    <nav class="selectedwork navbar-fixed-bottom">
-        <div class="container">
-            <div class="row">
-                <div class=" col-xs-12 col-md-offset-2 col-md-8">
-                    <h5> This is a website. There are many like it, but this one is ours.</h5>
-                </div>
-            </div>
-        </div>
-    </nav>
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-
-    <!-- Landing -->
-    <!-- Landing -->
-    <!-- Landing -->
-    <!-- Landing -->
-    <div class="landing vertical-center-container">
-        <div class="vertical-center-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-md-offset-2 col-md-7" style="z-index:100">
-                        <h1>
-                            Lone Rock Point is a purveyor of artisanal technology solutions for discerning organizations that appreciate quality and recognize value.
-                        </h1>
-
-                    </div>
-                    <div id="zigzag"> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-    </div>
-
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
-</body>
-
-
+	</body>
 </html>
-
-
-
-
-
-
-
-
-
-    <script src="./Michael Mazur_files/jquery.min.js"></script>
-    <script src="./Michael Mazur_files/bootstrap.min.js"></script>
-    <script src="./Michael Mazur_files/app.js"></script>
-
-
-
-
-</body></html>
